--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "node --import tsx --require dotenv/config --watch src/index.ts",
     "start": "node --import tsx --require dotenv/config src/index.ts",
+    "prod": "pm2 start src/index.ts --interpreter=node --interpreter-args=\"--import tsx --require dotenv/config --watch\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
